--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     // A005 lombok 추가 ==> Sync
     implementation('org.projectlombok:lombok:')
 
+    // A007 ==> Sync
+    annotationProcessor('org.projectlombok:lombok:')
+    testImplementation('org.projectlombok:lombok:')
+    testAnnotationProcessor('org.projectlombok:lombok:')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
